--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">LoginAndSignUp</string>
 
+    <string-array name="spinner_items">
+        <item>COFFEE</item>
+        <item>CAKE</item>
+    </string-array>
 
     <string name="start_button">Get Started</string>
     <string name="order_now">Order Now</string>
